--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="codelab_dicoding_belajar_flutter_pemula">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="https://yudapratama25.github.io/flutter-web/icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="https://yudapratama25.github.io/flutter-web/favicon.png"/>
 
-  <title>codelab_dicoding_belajar_flutter_pemula</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Dicoding FLutter Pemula</title>
+  <link rel="manifest" href="https://yudapratama25.github.io/flutter-web/manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = '1936149325';
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
+  <script src="https://yudapratama25.github.io/flutter-web/flutter.js" defer></script>
 </head>
 <body>
   <script>
