--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="/flutter-web/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -24,20 +24,20 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="codelab_dicoding_belajar_flutter_pemula">
-  <link rel="apple-touch-icon" href="https://yudapratama25.github.io/flutter-web/icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://yudapratama25.github.io/flutter-web/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Dicoding FLutter Pemula</title>
-  <link rel="manifest" href="https://yudapratama25.github.io/flutter-web/manifest.json">
+  <title>codelab_dicoding_belajar_flutter_pemula</title>
+  <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1936149325';
+    var serviceWorkerVersion = '26950287';
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="https://yudapratama25.github.io/flutter-web/flutter.js" defer></script>
+  <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
